# cppforgex

./: BENCHMARK_Guide_GPT.md  CMakeLists.txt  CMake_Blueprint.md  README.md  generate_commits.py  generate_realistic_commits.py  generate_specific_commits.py  main.cpp
arrays/: arr.cpp  arr.h
bench/: CMakeLists.txt
fstream/: file.cpp  (+1 more)
libs/: CMakeLists.txt  conc  concurrency  concurrency.cpp  main  main.cpp  sample  sample.cpp
libs/Launch_main_2026-06-07_15.01.11_278D27F9.trace/: form.template
libs/Launch_main_2026-06-07_15.01.11_278D27F9.trace/Trace1.run/: RunIssues.storedata
libs/Launch_main_2026-06-07_15.01.11_278D27F9.trace/Trace2.run/: RunIssues.storedata
libs/Launch_main_2026-06-07_15.01.11_278D27F9.trace/corespace/run1/core/core-config/: exposedTableInfo.plist
libs/Launch_main_2026-06-07_15.01.11_278D27F9.trace/corespace/run1/core/stores/indexed-store-13/: bulkstore  spindex.0
libs/Launch_main_2026-06-07_15.01.11_278D27F9.trace/corespace/run1/core/stores/indexed-store-15/: bulkstore  bulkstore_descriptor  spindex.0
libs/Launch_main_2026-06-07_15.01.11_278D27F9.trace/corespace/run1/core/stores/indexed-store-16/: bulkstore  spindex.0
libs/Launch_main_2026-06-07_15.01.11_278D27F9.trace/corespace/run1/core/table-manager/: tables.plist
libs/Launch_main_2026-06-07_15.01.11_278D27F9.trace/corespace/run1/core/uniquing/: strings
libs/Launch_main_2026-06-07_15.01.11_278D27F9.trace/symbols/stores/: 45EE613A-E3A9-3E49-877C-E7B3A9B29A9E.symbolsarchive  FD466162-8122-3F5A-BAED-39A02C7BB887.symbolsarchive
libs/main.dSYM/Contents/Resources/DWARF/: main
(+450 files in other folders)
